# LaMaisonVivante

./: Cargo.toml  README.md
appliances/dishwasher/vzug-reader/: Cargo.toml  README.md
appliances/dishwasher/vzug-reader/src/: command.rs  configuration.rs  main.rs  reader.rs  state.rs  thing.rs  unit.rs
blinds/: README.md  blinds.ino
blinds/blinds/: Cargo.toml  README.md
blinds/blinds-controller/: Cargo.toml  README.md
blinds/blinds-controller/src/: command.rs  configuration.rs  main.rs  thing.rs  writer.rs
blinds/blinds/src/: command.rs  configuration.rs  thing.rs
dhw-ventilation/nilan/: Cargo.toml  README.md
dhw-ventilation/nilan-reader/: Cargo.toml  README.md
dhw-ventilation/nilan-reader/src/: command.rs  configuration.rs  main.rs  modbus.rs  reader.rs  state.rs  thing.rs  unit.rs
dhw-ventilation/nilan/src/: command.rs  configuration.rs  main.rs  modbus.rs  reader.rs  state.rs  thing.rs  unit.rs  writer.rs
electricity/victron-reader/: Cargo.toml  README.md
electricity/victron-reader/doc/: CCGX-Modbus-TCP-register-list-2.51--field-list-table.csv
electricity/victron-reader/src/: command.rs  configuration.rs  dbus.rs  main.rs  reader.rs  state.rs  thing.rs  tui.rs  unit.rs
electricity/victron-reader/src/tui/: drawer.rs  mod.rs
hub/database/: README.md
hub/database/doc/: INSTALL.md  queries.md
hub/database/migrations/2021-05-13-182526_create_electricity/: down.sql  up.sql
hub/database/migrations/2021-05-18-085517_create_ventilation/: down.sql  up.sql
hub/database/migrations/2021-05-18-085531_create_domestic_hot_water/: down.sql  up.sql
hub/database/migrations/2022-01-26-195313_update_ventilation_to_add_air_state/: down.sql  up.sql
hub/doc/: INSTALL.md  queries.md
hub/event-aggregator/: Cargo.toml  README.md  diesel.toml
hub/event-aggregator/src/: aggregator.rs  command.rs  configuration.rs  main.rs
hub/event-aggregator/src/database/: enums.rs  models.rs  schema.rs
hub/event-aggregator/src/thing/: generic.rs  identified.rs  mod.rs
hub/event-automator/: Cargo.toml  README.md  diesel.toml
hub/event-automator/src/: actions.rs  command.rs  configuration.rs  event_loop.rs  events.rs  main.rs  state.rs
hub/event-automator/src/database/: enums.rs  mod.rs  models.rs  schema.rs
hub/grafana/: daily_view_dashboard.json  live_dashboard.json
hub/ui/: .gitignore  README.md  index.html
hub/ui/static/icons/weather/: README.md
hub/ui/static/javascript/: main.js  openweathermap.js  sunrise.js
hub/ui/static/style/: main.css
hub/ui3d/: index.html
hub/ui3d/assets/bed/: license.txt  scene.gltf
hub/ui3d/assets/bulb/: scene.gltf
hub/ui3d/assets/shower/: scene.gltf
hub/ui3d/assets/sink/: scene.gltf
hub/ui3d/assets/step-stool/: license.txt  scene.gltf
hub/ui3d/assets/toilet/: scene.gltf
lights/: README.md  lights.ino
lights/lights/: Cargo.toml  README.md
lights/lights-controller/: Cargo.toml  README.md
lights/lights-controller/src/: command.rs  configuration.rs  main.rs  thing.rs
lights/lights/src/: command.rs  configuration.rs  thing.rs
services/: README.md  alfen.service  blinds.service  hub-event-aggregator.service  hub-event-automator.service  kia.service  lights.service  nilan.service  ui.service  victron.service  weather.service
system/: INSTALL.md
tanks/: .gitignore  README.md  tanks.ino
tanks/tanks-controller/: Cargo.toml
tanks/tanks-controller/src/: command.rs  configuration.rs  main.rs  reader.rs
transport/alfen/: Cargo.toml  README.md
transport/alfen/src/: command.rs  configuration.rs  main.rs  modbus.rs  reader.rs  state.rs  thing.rs  unit.rs  writer.rs
transport/kia/: Cargo.toml  README.md  get_tokens.sh
transport/kia/src/: auth.rs  brand.rs  command.rs  configuration.rs  errors.rs  garage.rs  http.rs  identity.rs  main.rs  test.json  thing.rs  units.rs  vehicles.rs
water/tank-level-sensor/: .gitignore  README.md  tank_level_sensor.ino
water/tank_level_sensor/: .gitignore  README.md  tank_level_secrets.h  tank_level_sensor.ino
weather/: Cargo.toml  README.md
weather/src/: command.rs  configuration.rs  main.rs  reader.rs  state.rs  thing.rs
wot-gateway/: INSTALL.md  INSTALLATION.md
wot-gateway/init.d/: README.md  victron-reader
