[workspace]
members = [
    "appliances/dishwasher/vzug-reader/",
    "blinds/blinds/",
    "dhw-ventilation/nilan/",
    "electricity/victron-reader/",
    "hub/event-aggregator/",
    "hub/event-automator/",
    "transport/kia/",
    "transport/alfen/",
    "lights/lights/",
    "tanks/tanks-controller/",
    "weather/",
]