[workspace]
members = [
    "appliances/dishwasher/vzug-reader/",
    "blinds/blinds/",
    "dhw-ventilation/nilan/",
    "electricity/victron-reader/",
    "hub/event-aggregator/",
    "hub/event-automator/",
    "transport/kia/",
    "transport/alfen/",
    "lights/lights/",
    "tanks/tanks-controller/",
    "weather/",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.57"
chrono = { version = "0.4", features = ["serde"] }
confy = "0.4"
diesel = { version = "1.4", features = ["postgres"] }
diesel-derive-enum = { version = "1.0", features = ["postgres"] }
directories-next = "2.0"
human-panic = "1.0"
regex = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
tokio = { version = "1.20.1", features = ["rt", "tokio-macros", "full"] }
tokio-modbus = { version = "0.5.1", default-features = false, features = ["tcp", "sync"] }
uuid = "1.1.2"
webthing = "0.12"
