[package]
name = "weather"
version = "0.1.0"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2021"

[dependencies]
chrono = { workspace = true }
confy = { workspace = true }
directories-next = { workspace = true }
human-panic = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
structopt = { workspace = true }
webthing = { workspace = true }
