[package]
name = "nilan"
version = "0.2.0"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2018"

[dependencies]
tokio-modbus = { version = "0.4", default-features = false, features = ["tcp", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
human-panic = "1.0"
confy = "0.4"
directories-next = "2.0"
webthing = "0.12"