[package]
name = "nilan"
version = "1.0.0"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2021"

[dependencies]
confy = { workspace = true }
directories-next = { workspace = true }
human-panic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }
tokio-modbus = { workspace = true }
uuid = { workspace = true }
webthing = { workspace = true }
