[package]
name = "victron-reader"
version = "0.3.0"
authors = ["Ivan Enderlin <ivan.enderlin@mnt.io>"]
edition = "2018"

[dependencies]
tokio-modbus = { version = "0.4", default-features = false, features = ["tcp", "sync"] }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = { version = "0.8", default-features = false, features = ["crossterm"] }
crossterm = "0.16"
human-panic = "1.0"
confy = "0.4"
directories = "2.0"
webthing = "0.12"