[package]
name = "victron-reader"
version = "1.0.0"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2021"

[dependencies]
confy = { workspace = true }
directories-next = { workspace = true }
human-panic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }
tui = { version = "0.8", default-features = false, features = ["crossterm"] }
tokio-modbus = { version = "0.5.1", default-features = false, features = ["tcp", "sync"] }
crossterm = "0.16"
webthing = { workspace = true }
