[package]
name = "hub-event-aggregator"
version = "0.1.0"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2021"

[dependencies]
structopt = "0.3"
human-panic = "1.0"
confy = "0.4"
directories-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
diesel = { version = "1.4", features = ["postgres"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }