[package]
name = "hub-event-aggregator"
version = "0.1.0"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2021"

[dependencies]
confy = { workspace = true }
diesel = { workspace = true }
diesel-derive-enum = { workspace = true }
directories-next = { workspace = true }
human-panic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }
reqwest = { workspace = true }
