[package]
name = "event-automator"
version = "0.1.0"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2018"

[dependencies]
structopt = "0.3"
human-panic = "1.0"
confy = "0.4"
directories-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4", features = ["postgres"] }
sunrise = "1.0"
chrono = "0.4"