[package]
name = "hub-event-automator"
version = "0.1.0"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2021"

[dependencies]
confy = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel-derive-enum = { workspace = true }
human-panic = { workspace = true }
directories-next = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
structopt = { workspace = true }
sunrise = "1.0"
