[package]
name = "alfen"
version = "0.0.1"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2021"

[dependencies]
chrono = { workspace = true, features = ["std", "time", "serde", "iana-time-zone", "clock"] }
confy = { workspace = true }
directories-next = { workspace = true }
human-panic = { workspace = true }
tokio-modbus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }
webthing = { workspace = true }
