[package]
name = "kia"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
base64 = "0.22.0"
confy = { workspace = true }
human-panic = { workspace = true }
directories-next = { workspace = true }
rand = "0.8.5"
reqwest = { workspace = true, features = ["rustls-tls", "rustls-tls-native-roots", "cookies"] }
scraper = "0.13.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
structopt = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
webthing = { workspace = true }
