[package]
name = "vzug-reader"
version = "0.1.0"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
human-panic = "1.0"
confy = "0.4"
directories = "2.0"