[package]
name = "vzug-reader"
version = "0.1.0"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2021"

[dependencies]
confy = { workspace = true }
directories-next = { workspace = true }
human-panic = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }
tokio = { version = "0.2", features = ["full"] }
webthing = { workspace = true }
